# Front-Back

./: .env.example  .env.production.example  .gitignore  .woodpecker.yml  BUILD_BIBLE.md  CHANGELOG.md  CHAT_HISTORY.txt  CLAUDE.md  Caddyfile  Dockerfile.api  Dockerfile.web  HANDOFF.md  PRODUCT_MANIFEST.json  README.md  WAKE-UP-BRIEFING.md  bunfig.toml  docker-compose.prod.yml  docker-compose.production.yml  gatetest.config.json  lefthook.yml  local.db  package.json  turbo.json  vercel.json
.ai-flywheel/: config.json  services-registry.json
.claude/: settings.json
.claude/hooks/: dep-check.sh  guard.sh  post-edit.sh  pre-stop.sh  session-start.sh
.github/: CODEOWNERS  dependabot.yml  renovate.json
.github/workflows/: ci.yml  claude.yml  codeql.yml  db-restore-test.yml  deploy-vultr.yml  deploy.yml  diagnose.yml  gatetest-gate.yml  hetzner-recon.yml  hotfix.yml  set-worker-secrets.yml  smoke.yml
.husky/: pre-commit  pre-push
.woodpecker/: deploy.yml  env.yml
apps/api/: .env.example  package.json  tsconfig.json  wrangler.toml
apps/web/: app.config.ts  package.json  tsconfig.json  wrangler.toml
docs/: ADVANTAGE_LEVERS.md  ANCHOR_CUSTOMER_HUNT.md  BARE_METAL_MIGRATION.md  BUILD_BIBLE.md  BUILD_PLAN.md  CFO_CHARTER.md  CLOUDFLARE_PARITY_AUDIT.md  COMPETITIVE_MATRIX.md  COMPETITIVE_REALITY.md  CRONTECH-ARCHITECTURE.md  CRON_REPO.md  DEPENDENCY_UPDATES.md  DNS_CUTOVER_PLAN.md  EDGE_RUNTIME_V0.md  EMPIRE.md  EMPLOYMENT_MISSION.md  GATETEST_TRIAGE_2026-04-26.md  HETZNER_DECOMMISSION.md  INFRASTRUCTURE.md  LAUNCH_CHECKLIST.md  MIGRATIONS.md  PLATFORM_STATUS.md  POSITIONING.md  PROGRESS_LOG.md  REFERENCE.md  SELF_HOSTED_CUTOVER.md  SELF_SUFFICIENCY.md  SIMMER_PROTOCOL.md  STACK_RULES.md  STRATEGY.md  STRATEGY_APPENDIX.md  STRIPE_SETUP.md  SUCCESSION.md  TONIGHT_CHEAT_SHEET.md  gluecron-build-plan.md
docs/adr/: 003-three-tier-compute.md
docs/cfo/: CHARTER.md
docs/changelog/: README.md
docs/claude-takeover/: README.md  claude-auto-review.yml  claude-ci-watchdog.yml  claude.yml
docs/doctrine-drafts/: CLAUDE-SECTIONS.md
docs/empire/: crontech-substrate-inventory.md  email-carve.md  gatetest-carve.md  gluecron-spec.md  zoobicon-carve.md
docs/legal/: COOKIE_POLICY.md  DPA.md  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  attorney-package.md  pre-launch-audit.md
docs/migrations/: README.md  week-1-marcoreid.md  week-2-emailed.md  week-3-astra.md  week-4-ai-immigration.md  week-5-gatetest.md  week-6-voice.md  week-7-zoobicon.md
docs/mission/: SELFHOST-CUTOVER.md  SUCCESSION.md
docs/ops/: DEPLOYMENT_RUNBOOK.md
docs/runbooks/: FULL-SELFHOST-LAUNCH.md  GO-LIVE.md  add-dns.md  add-gluecron.md  auto-deploy.md  caddy-bare-metal.md  observability.md  secrets.md  security-and-backups.md  staging-environment.md  web-terminal.md  woodpecker-install.md  (+1 more)
infra/: README.md  STANDALONE_STACK.md  phase-0.sh
scripts/: a11y-check.ts  add-dns-gluecron.sh  add-gluecron.sh  backup-postgres.sh  bare-metal-migrate.sh  bare-metal-setup.sh  bootstrap-empire.sh  bundle-size-check.ts  button-checker.ts  db-status.ts  db-validate.ts  deploy-production.sh  deploy-update.sh  deploy-vultr.sh  empire-health.sh  fix-gluecron-service.sh  fix-website-access.sh  generate-changelog.test.ts  generate-changelog.ts  generate-icons.ts  generate-sitemap.ts  go-live.sh  harden-ubuntu.sh  import-all-cloudflare-zones.ts  import-dns-zone.ts  install-auto-deploy.sh  install-backup-cron.sh  install-observability.sh  install-staging.sh  install-web-terminal.sh  install-woodpecker.sh  link-checker.ts  migrate-to-gitea.sh  mirror-all-to-gluecron.sh  mirror-repos-to-gluecron.sh  mirror-to-gluecron.sh  secrets-init.sh  secrets-rotate.sh  secrets-verify.sh  seed-admin.ts  (+7 more)
services/image-optimizer-rs/: Cargo.toml  README.md
services/image-optimizer-rs/benches/: transform.rs
services/image-optimizer-rs/src/: error.rs  lib.rs  main.rs  negotiation.rs  params.rs  server.rs  source.rs  transform.rs
services/image-optimizer-rs/tests/: allowlist_test.rs  cache_key_test.rs  common.rs  negotiation_test.rs  params_test.rs  transform_test.rs
services/rum-rs/: Cargo.toml  README.md
services/rum-rs/benches/: ingest.rs
services/rum-rs/src/: lib.rs  main.rs  percentile.rs  rate_limit.rs  schema.rs  server.rs  store.rs  timeseries.rs
services/rum-rs/tests/: server.rs
services/tunnel-rs/: Cargo.toml  README.md
services/tunnel-rs/benches/: forward.rs
services/tunnel-rs/src/: lib.rs  protocol.rs  transport.rs
services/tunnel-rs/src/edge/: mod.rs  registry.rs
services/tunnel-rs/src/origin/: backoff.rs  mod.rs  router.rs
services/tunnel-rs/tests/: e2e.rs
services/waf-rs/: Cargo.toml  README.md
services/waf-rs/benches/: eval.rs
services/waf-rs/src/: lib.rs  main.rs  owasp.rs  rate_limit.rs  registry.rs  rules.rs  server.rs
services/waf-rs/tests/: integration.rs
(+1192 files in other folders)
