[package]
name = "image-optimizer-rs"
version = "0.1.0"
edition = "2021"
description = "Crontech Rust port of the image-optimizer service. 10x faster than the sharp-based TS reference."
license = "MIT"

[lib]
name = "image_optimizer_rs"
path = "src/lib.rs"

[[bin]]
name = "image-optimizer-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
webp = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
url = "2"
bytes = "1"
mime = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[features]
default = []
# Optional v2 feature flag for libvips-backed transforms; not implemented in v1.
libvips = []

[[bench]]
name = "transform"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
