[package]
name = "rum-rs"
version = "0.1.0"
edition = "2021"
description = "Crontech RUM collector — Rust port targeting 10x throughput vs the TS reference implementation."
license = "Apache-2.0"

[lib]
name = "rum_rs"
path = "src/lib.rs"

[[bin]]
name = "rum-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hdrhistogram = "7"
parking_lot = "0.12"
bytes = "1"
thiserror = "1"
ahash = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full", "test-util"] }
http-body-util = "0.1"
hyper = "1"

[[bench]]
name = "ingest"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3
