[package]
name = "tunnel-rs"
version = "0.1.0"
edition = "2021"
description = "Crontech reverse-tunnel data plane (Rust port of services/tunnel)"
license = "Apache-2.0"
publish = false

[lib]
name = "tunnel_rs"
path = "src/lib.rs"

[[bin]]
name = "tunnel-edge"
path = "src/bin/tunnel-edge.rs"

[[bin]]
name = "tunnel-origin"
path = "src/bin/tunnel-origin.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.7"
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.8"
subtle = "2.5"
futures-util = "0.3"
http = "1.1"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.41", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "forward"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
